fixed aside and footer overlap

--- a/style.css
+++ b/style.css
@@ -165,17 +165,17 @@ nav {
   float: right;
   position: fixed;
   z-index: 1;
-  top: 60;
   right: 0;
   /* background-color: #F8AD9D; */
   overflow-x: hidden;
-  padding-top: 180px;
+  padding-top: 25px;
   padding-right: 20px;
 }
 
 #aside-label{
   text-align: center;
   text-align: right;
+  top: 0;
 }
 
 #aside-list ul{
@@ -209,7 +209,6 @@ nav {
   float: right;
   height: 90%;
   position: fixed;
-  /* z-index: -1; */
   right: 0;
   /* background-color: #F8AD9D; */
   overflow-x: hidden;
